# MitraAI

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  AZURE_DEPLOYMENT_GUIDE.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  benchmark.py  improve.py  main.py  pyproject.toml  requirements.txt  train.py
.github/workflows/: ci.yml  deploy-azure.yml  deploy.yml
mitra/: __init__.py  config.py
mitra/ai/: __init__.py
mitra/ai/superintelligence/: __init__.py  mitra_brain.py
mitra/bot/: __init__.py  telegram_bot.py
mitra/core/: __init__.py  emotion_analyzer.py  engine.py  local_model.py  prompts.py  safety_filter.py
mitra/core/errors/: __init__.py  base.py  circuit_breaker.py  exceptions.py  handler.py  retry.py
mitra/models/: __init__.py  conversation.py  user.py
mitra/telegram/: __init__.py  bot.py  config.py
mitra/telegram/admin/: __init__.py  ai_control.py  broadcast.py  dashboard.py  monitoring.py  panel.py  permissions.py  user_management.py
mitra/telegram/handlers/: __init__.py  callbacks.py  commands.py  inline.py  media.py  messages.py  payments.py
mitra/telegram/keyboards/: __init__.py  inline.py
mitra/telegram/middleware/: __init__.py  auth.py  logging.py  rate_limit.py
mitra/telegram/services/: __init__.py  session_service.py  user_service.py
mitra/utils/: __init__.py  error_handler.py  logger.py  rate_limiter.py
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_emotion_analyzer.py  test_models.py  test_rate_limiter.py  test_safety_filter.py
(+27 files in other folders)
